--- a/render.yaml
+++ b/render.yaml
@@ -18,7 +18,7 @@ services:
         sync: false
       - key: AWS_SECRET_ACCESS_KEY
         sync: false
-      - key: S3_BUCKET
+      - key: AWS_S3_BUCKET
         sync: false
 
   # -----------------------------------------------------
