--- a/requirements-worker.txt
+++ b/requirements-worker.txt
@@ -1,12 +1,13 @@
-# --- Install Playwright Python library ---
+##################################################
+# Playwright Browser Worker Requirements (Final)
+##################################################
+
+# --- Playwright Python binding (browsers already in base image) ---
 playwright==1.56.0
 
-# --- Core async and DB ---
+# --- Async + DB ---
 asyncpg==0.31.0
 aiohttp==3.13.2
-
-# --- Browser automation support ---
-# DO NOT install playwright here - base image already includes it.
 
 # --- AWS S3 ---
 boto3==1.41.2
@@ -19,6 +20,7 @@ pdfplumber==0.11.8
 PyMuPDF==1.26.6
 pillow==12.0.0
 puremagic==1.30
+docx2txt==0.9
 
 # --- AI + LLM ---
 openai==2.8.1
